# MLPro-Int-PettingZoo

./: README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi_deploy.yml
doc/rtd/: conf.py  index.rst  requirements.txt
doc/rtd/content/01_example_pool/01_howtos_rl/: howto_rl_wp_001_mlpro_environment_to_petting_zoo_environment.rst  howto_rl_wp_002_run_multiagent_with_own_policy_on_petting_zoo_environment.rst
doc/rtd/content/03_about/: 01_versions.rst
src/: setup.py
src/mlpro_int_pettingzoo/: __init__.py
src/mlpro_int_pettingzoo/wrappers/: basics.py
test/: test_examples.py
test/howtos/rl/: howto_rl_wp_001_mlpro_environment_to_petting_zoo_environment.py  howto_rl_wp_002_run_multiagent_with_own_policy_on_petting_zoo_environment.py
