[metadata]
name = mlpro-int-pettingzoo
version = 1.0.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration PettingZoo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-pettingzoo.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-pettingzoo.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro[full]>=1.4.0
    pygame>=2.1.3
    pymunk>=6.4.0
    pettingzoo>=1.22.3

